feat: Implementa lógica completa do tabuleiro e fluxo de batalha inicial
Adiciona:
- Classe Celula para representar as células do tabuleiro.
- Posicionamento de Pokémons selvagens por região no tabuleiro.
- Interação do jogador com as células (encontrar Pokémon, captura).
- Lógica de movimento de Pokémon selvagem ao escapar da captura.
- Método restaurarEnergia() em Pokemon.
- Fluxo de batalha inicial entre treinadores (desafio do computador).
- Atualização da UI para exibir o tabuleiro com regiões coloridas e revelar Pokémons.

Corrige:
- Erros de "cannot find symbol" relacionados à Celula e métodos em Pokemon.
- Problemas de importação e dependências entre as classes.